force-app/main/default/objects/Opportunity/fields/Customer_Info__c.field-meta.xml
<CustomField>
    <fullName>Customer_Info__c</fullName>
    <label>Customer Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo 1</fullName>
            </value>
            <value>
                <fullName>Demo 2</fullName>
            </value>
            <value>
                <fullName>Demo 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>