force-app/main/default/objects/Opportunity/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <label>Demo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>