force-app/main/default/objects/Opportunity/fields/Next_Step_Custom__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Custom__c</fullName>
    <label>Next Step Custom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>