force-app/main/default/objects/Opportunity/validationRules/Opportunity_Close_Date_is_not_greater_th.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Close_Date_is_not_greater_th</fullName>
    <active>false</active>
    <errorConditionFormula>CloseDate &gt; DATE(IF(MONTH(TODAY()) = 12, YEAR(TODAY()) + 1,YEAR( TODAY() )) ,IF(MONTH( TODAY() ) = 12, 12,MONTH( TODAY() )+1), 1)-1</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Opportunity Close Date is not greater than the last date of the current month</errorMessage>
</ValidationRule>