force-app/main/default/objects/Opportunity/validationRules/Stage_Changed_to_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Changed_to_Closed_Won</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( $Profile.Name = &quot;System Administrator&quot;),  ISPICKVAL( PRIORVALUE( StageName ) , &quot;Negotiation/Review&quot;) ,  ISPICKVAL(StageName, &quot;Closed Won&quot;),  ISBLANK( NextStep )   )</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>if the Stage is changed to Closed Won from Negotiation then the ‘Next step’ field must be populated – i.e., it cannot be empty.</errorMessage>
</ValidationRule>